--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-router": "^5.1.4",
     "expo-secure-store": "^14.2.3",
@@ -50,6 +51,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-module-scripts": "^5.0.7",
     "typescript": "~5.8.3"
   },
   "private": true
